user-skel/repos/quality-gates-hot/k8s-deploy-staging/front-end.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
        version: v1
    spec:
      containers:
      - name: front-end
        image: 10.31.240.247:5000/library/sockshop/front-end-0.6.0
        resources:
          limits:
            cpu: 300m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 320Mi
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
      nodeSelector:
        beta.kubernetes.io/os: linux

---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    app: front-end
  namespace: staging
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: front-end
  type: LoadBalancer
