user-skel/repos/quality-gates-hot/k8s-deploy-staging/carts.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts
  template:
    metadata:
      labels:
        app: carts
        version: v1
    spec:
      containers:
      - name: carts
        image: 10.31.240.247:5000/library/sockshop/carts-0.7.0
        resources:
          limits:
            cpu: 500m
            memory: 2048Mi
          requests:
            cpu: 400m
            memory: 768Mi
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 15
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 15
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: carts
  labels:
    app: carts
  namespace: staging
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: carts
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: carts
  name: carts
  namespace: staging
spec:
  rules:
  - host: carts.staging.INGRESS_DOMAIN_PLACEHOLDER
    http:
      paths:
      - backend:
          service:
            name: carts
            port: 
              number: 80
        path: /
        pathType: ImplementationSpecific
